# softpack

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
scene/: 1. scene.json  2. scene.json  3. scene.json  demo.json
script/: scene_generator.py
src/: pack_main.cpp
src/client/: pack_client_app.cpp  pack_client_app.hpp  pack_client_canvas.cpp  pack_client_canvas.hpp  pack_client_main.cpp
