cmake_minimum_required(VERSION 4.0.0)

set(CMAKE_CXX_STANDARD 23)
set(PROJECT_NAME softpack)

project(${PROJECT_NAME})

if (EXISTS "${CMAKE_BINARY_DIR}/conan_toolchain.cmake")
  include("${CMAKE_BINARY_DIR}/conan_toolchain.cmake")
endif()

set(BOOST_LIBS boost::boost)
set(BOX2D_LIBS box2d::box2d)
set(JSONCPP_LIBS JsonCpp::JsonCpp)
set(IMGUI_LIBS imgui::imgui)
set(IMGUI_SFML_LIBS ImGui-SFML::ImGui-SFML)
set(SFML_LIBS sfml::sfml)

find_package(Boost REQUIRED COMPONENTS ${BOOST_LIBS})
find_package(box2d REQUIRED COMPONENTS ${BOX2D_LIBS})
find_package(jsoncpp REQUIRED COMPONENTS ${JSONCPP_LIBS})
find_package(imgui REQUIRED COMPONENTS ${IMGUI_LIBS})
find_package(ImGui-SFML REQUIRED COMPONENTS ${IMGUI_SFML_LIBS})
find_package(SFML REQUIRED COMPONENTS ${SFML_LIBS})

set(CONAN_LIBS ${BOOST_LIBS} ${BOX2D_LIBS} ${JSONCPP_LIBS} ${IMGUI_LIBS} ${IMGUI_SFML_LIBS} ${SFML_LIBS})

set(SOURCES "*.cpp")
set(HEADERS "*.hpp")

set(CLIENT_PROJECT_NAME "client")
set(CLIENT_PROJECT_PATH "src/client/")

set(LIBRARY_PROJECT_NAME "library")
set(LIBRARY_PROJECT_PATH "src/library/")

file(GLOB_RECURSE CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${CLIENT_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE CLIENT_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${CLIENT_PROJECT_PATH}${HEADERS}")

file(GLOB_RECURSE LIBRARY_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${LIBRARY_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE LIBRARY_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${LIBRARY_PROJECT_PATH}${HEADERS}")

add_executable(${CLIENT_PROJECT_NAME} ${CLIENT_SOURCES} ${CLIENT_HEADERS})
add_library(${LIBRARY_PROJECT_NAME} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})

target_link_libraries(${CLIENT_PROJECT_NAME} ${CONAN_LIBS} ${LIBRARY_PROJECT_NAME})
target_link_libraries(${LIBRARY_PROJECT_NAME} ${CONAN_LIBS})
